[package]
name = "clow"
version = "0.1.0"
edition = "2024"
exclude = [
    "target/*",
]
authors = ["Adrian Paskert"]
license = "MIT OR Apache-2.0"
description = "Lower-Level wrapper around Cudarc pointer types"
repository = "https://github.com/LateinCecer/clow"
readme = "README.md"

keywords = ["cuda", "nvidia", "gpu"]
categories = [
    "api-bindings",
    "hardware-support",
    "memory-management",
    "science",
]

[features]
cust = ["dep:cust"]
default_features = []

[dependencies]
cudarc = { version= "0.19", features=["driver"] }
cust = { version="0.3.2", optional = true }
log = "0.4.29"

[dev-dependencies]
cudarc = { version="^0.19", features = ["cuda-12080"] }

